Page align issue

--- a/styles/style1.css
+++ b/styles/style1.css
@@ -318,7 +318,7 @@ body{
   .main {
     flex-direction: column;
     align-items: center;
-    width: 310px;
+    width: 320px;
     margin-left: 2px;
     padding: 15px;
     height: auto;
@@ -427,7 +427,7 @@ body{
 /* Show only on mobile */
 @media (max-width: 768px) {
     #mobile-nav-toggle {
-        display: flex;
+        display: none;
         position: fixed;
         bottom: 20px;
         right: 20px;
