--- a/styles/style2.css
+++ b/styles/style2.css
@@ -283,7 +283,7 @@
     
     .about{
        margin-left: 5px;
-       width: 335px;
+       width: 345px;
        margin-top: 30px;
     }
 
