--- a/styles/style3.css
+++ b/styles/style3.css
@@ -88,7 +88,7 @@
     }
     .resume{
         margin-left: 5px;
-        width: 333px;
+        width: 343px;
         margin-top: -40px;
     }
     .pg{
