--- a/styles/style4.css
+++ b/styles/style4.css
@@ -148,7 +148,7 @@
 @media (max-width: 768px) {
     .portfolio{
         margin-left: 5px;
-        width: 333px;
+        width: 343px;
         margin-top: -35px;
     }
     .projects h2{
