--- a/styles/style5.css
+++ b/styles/style5.css
@@ -129,7 +129,7 @@
         display: none;
     }
     .contact{
-        width: 333px;
+        width: 343px;
         margin-left: 5px;
         margin-top: -35px;
     }
